tests/ui/non-paren-group.rs
use efg::efg;

#[efg(unix || [...])]
struct S;

fn main() {}
